<resources>
    <string name="app_name">Inzidenzen Check</string>
    <string name="stadtkreis">Stadtkreis</string>
    <string name="landkreis">Landkreis</string>
    <string name="bundesland">Bundesland</string>
    <string name="enter_location">Bundesland/Landkreis/Stadtkreis</string>
    <string name="send">Abfragen</string>
    <string name="error_wrongType">Der ausgewählte Typ konnte nicht zugeordnet werden</string>
    <string name="click_to_start">Klicke um zu starten</string>
    <string name="click_to_start_abfrage">Name eingeben und auf \"Abfrage\" drücken</string>
    <string name="search_for_something">Suche nach einem Bundesland/Landkreis/Stadtkreis</string>
    <string name="error_cant_find_landkreis">Fehler: Landkreis konnte nicht gefunden werden</string>
    <string name="error_cant_find_stadtkreis">Fehler: Stadtkreis konnte nicht gefunden werden</string>
    <string name="error_cant_find_bundesland">Fehler: Bundesland konnte nicht gefunden werden</string>
    <string name="error_no_connection">Keine Internetverbindung verfügbar</string>
    <string name="data_quelle_rki">Quelle: Robert Koch–Institut (RKI), dl–de/by–2–0</string>
    <string name="app_version">v.0.5.0</string>
    <string name="developed_by">Entwickelt von Luki2811</string>
    <string name="save">Speichern</string>
    <string name="settings">Einstellungen</string>
    <string name="settings_loadOldRequest">Letzte Abfrage automatisch einfügen</string>
    <string name="open_licences">Open-Source-Lizenzen öffnen</string>
    <string name="other">Sonstiges</string>
    <string name="third_party_notices">Hinweise von Drittanbietern</string>
    <string name="error_analysis">Fehler bei der Auswertung</string>
    <string name="error_app_restart_to_update">App neustarten um Daten zu aktualisieren</string>
    <string name="error_cant_load_data">Fehler: Daten konnten nicht geladen werden</string>
    <string name="download_data">Daten werden heruntergeladen…</string>
    <string name="successfully_saved">Erfolgreich gespeichert</string>
    <string name="result">%1$s hat eine Coronainzidenz von:</string>
    <string name="twoStrings">%1$s \n %2$s</string>
    <string name="refresh">Aktualisieren</string>
    <string name="refresh_data">Daten werden aktualisiert</string>
    <string name="data_status">Datenstand: %1$s</string>
</resources>